// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense list 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <Connect(ExpenseListItem)
      amount={199}
      createdAt={0}
      description="Gum"
      id="0"
      index={1}
      key="0"
    />
    <Connect(ExpenseListItem)
      amount={43500}
      createdAt={-432000000}
      description="Car Rental"
      id="1"
      index={2}
      key="1"
    />
    <Connect(ExpenseListItem)
      amount={199}
      createdAt={432000000}
      description="Wine"
      id="2"
      index={3}
      key="2"
    />
  </div>
</div>
`;

exports[`should render expense list with empty list 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        Nothing to show... ad something
      </span>
    </div>
  </div>
</div>
`;
